--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,17 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-#logging.level.com.nowconder.community=debug
-#logging.file.name=D:/work/data/nowconder/community.log
+logging.level.com.nowconder.community=debug
+logging.file.name=D:/work/data/nowconder/community.log
+
+# MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=815098202@qq.com
+spring.mail.password=benuousevocxbejb
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain = http://localhost:8080
+community.path.upload = d:/work/data/upload
