--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,20 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 # community
 community.path.domain = http://localhost:8080
 community.path.upload = d:/work/data/upload
+
+# RedisProperties
+spring.redis.database=11
+spring.redis.host-localhost
+spring.redis.port=6379
+
+# KafkaPropoerties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
+
+# ElasticsearchProperties
+#spring.data.elasticsearch.cluster-name=nowconder
+#spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+elasticsearch.url=127.0.0.1:9200
+#spring.elasticsearch.username=
